--- a/Manifestos/app-deployment.yaml
+++ b/Manifestos/app-deployment.yaml
@@ -13,8 +13,8 @@ spec:
   strategy:
     type: RollingUpdate
     rollingUpdate:
-      maxUnavailable: 1
-      maxSurge: 1 
+      maxUnavailable: 25%
+      maxSurge: 25%
   template:
     metadata:
       labels:
