--- a/Manifestos/ingress-app.yaml
+++ b/Manifestos/ingress-app.yaml
@@ -2,7 +2,6 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: giropops-ingress
-  namespace: giropops
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
     cert-manager.io/cluster-issuer: letsencrypt-prod
@@ -16,10 +15,17 @@ spec:
   - host: giropops.k0dy.pro
     http:
       paths:
-      - path: /       
+      - path: /
         pathType: Prefix
         backend:
           service:
             name: giropops-senhas
             port:
               number: 5000
+      - path: /grafana
+        pathType: Prefix
+        backend:
+          service:
+            name: giropops-senhas-grafana
+            port:
+              number: 3000
