--- a/Manifestos/service-grafana.yaml
+++ b/Manifestos/service-grafana.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: giropops-senhas
+  name: giropops-senhas-grafana
   labels:
     app: giropops-senhas
 spec:
   selector:
     app: giropops-senhas
   ports:
-    - port: 5000
+    - port: 3000
       protocol: TCP
-      targetPort: 5000
+      targetPort: 3000
   type: ClusterIP
