--- a/Manifestos/service-app.yaml
+++ b/Manifestos/service-app.yaml
@@ -12,3 +12,18 @@ spec:
       protocol: TCP
       targetPort: 5000
   type: ClusterIP
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: redis-service
+spec:
+  selector:
+    app: redis
+  ports:
+    - port: 6379
+      targetPort: 6379
+      protocol: TCP
+  type: ClusterIP
